Bug 826115 - Remove noisy NS_ENSURE_TRUE(rollupWidget, false) from nsWindow.cpp r=jimm