widget/windows/nsWindow.cpp
@@ -8032,7 +8032,8 @@ nsWindow::DealWithPopups(HWND inWnd, UINT inMsg, WPARAM inWParam, LPARAM inLPara
   nsIRollupListener* rollupListener = nsBaseWidget::GetActiveRollupListener();
   NS_ENSURE_TRUE(rollupListener, false);
   nsCOMPtr<nsIWidget> rollupWidget = rollupListener->GetRollupWidget();
-  NS_ENSURE_TRUE(rollupWidget, false);
+  if (!rollupWidget)
+    return false;
 
   inMsg = WinUtils::GetNativeMessage(inMsg);
   if (inMsg == WM_LBUTTONDOWN || inMsg == WM_RBUTTONDOWN || inMsg == WM_MBUTTONDOWN ||
